Agregar responsive y pagina 404

--- a/src/pages/Home/home.html
+++ b/src/pages/Home/home.html
@@ -35,3 +35,9 @@
 
 <!-- Mostrar utlimos empleos -->
 <div id="jobs-home-contain"></div>
+
+<!-- Ver mas trabajos -->
+
+<div class="vm-contain">
+  <a href="#/jobs">View More</a>
+</div>
