--- a/src/pages/Jobs/jobs.html
+++ b/src/pages/Jobs/jobs.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="search-jobs-contain">
-    <input id="search-input" type="text">
+    <input id="search-input" placeholder="Type your query" type="text">
     <button id="search-button">Find</button>
   </div>
   
